# AI

./: .gitignore  .pre-commit-config.yaml  README.md  config-improved-math.yaml  config-with-external-ontologies.yaml  config.yaml  config_schema.json  create_robust_enrichment_system.py  dbpedia-workflow-config.yaml  dbpedia_server.py  debug_batch_vs_individual.py  debug_capm.py  debug_capm_scoring.py  debug_concepts_api.py  debug_efficient_frontier_specific.py  debug_enrichment_issue.py  debug_sharpe_ratio_error.py  demo_external_ontology_workflow.py  demo_tooltip_data.py  enhanced_test_server.py  final_validation.py  fix_inconsistent_enrichment_state.py  fix_problematic_concepts.py  force_save_enrichment.py  main.py  pyproject.toml  regenerate_knowledge_graph.py  run_dbpedia_workflow.py  run_workflow_demo.py  simple-config.yaml  simple_server.py  simple_test_concepts.py  test-config.yaml  test_actual_enrichment.py  test_api_dbpedia.py  test_capm_final.py  test_complete_workflow.py  test_concepts_api_enrichment.py  test_dbpedia_enrichment.py  test_dbpedia_simple.py  (+18 more)
.claude/: Claude.md  Mathematical_Detection_Improvements.md  OCR_Configuration.md  README.md  RECENT_ENHANCEMENTS.md  coding-guidelines.md  config.yaml  project-context.md  project-info.md  settings.json
.claude/commands/: docpush.md  optimize.md  quality.md  requirements-start.md  runfull.md
.claude/prompts/: code-quality.md  portfolio-optimizer.md
.claude/requirements/: .current-requirement
.claude/requirements/2025-07-15-1527-graph-database-ontology/: 01-discovery-questions.md  02-discovery-answers.md  05-detail-answers.md  06-requirements-spec.md
.claude/requirements/2025-07-15-2007-graphical-web-frontend/: 00-initial-request.md  02-discovery-answers.md  metadata.json
.claude/templates/: module-template.py  test-template.py
.github/workflows/: ci.yml  release.yml  test.yml
docs/: CLAUDE.md  COMPLETE_WORKFLOW_GUIDE.md  Claude.md  DEPLOYMENT.md  Gemini.md  OCR_Configuration.md  conf.py  external-knowledge-integration.md  index.rst  installation.md  modules.rst
docs/modules/: config.rst  extractors.rst  frontend.rst  ingestion.rst  knowledge.rst  monitoring.rst  optimization.rst
examples/: example_chunk_embed.py  external_ontology_demo.py
requirements/: .current-requirement
requirements/2025-01-16-1442-enhanced-graph-metadata/: 00-initial-request.md  01-discovery-questions.md  02-discovery-answers.md  03-context-findings.md  04-detail-questions.md  05-detail-answers.md  06-requirements-spec.md  metadata.json
requirements/2025-07-15-1527-graph-database-ontology/: 00-initial-request.md  03-context-findings.md  04-detail-questions.md  metadata.json
requirements/2025-07-15-2007-graphical-web-frontend/: 01-discovery-questions.md  03-context-findings.md  04-expert-detail-questions.md  05-expert-detail-answers.md  06-requirements-specification.md
requirements/2025-07-16-1032-dbpedia-integration/: 00-initial-request.md  01-discovery-questions.md  02-discovery-answers.md  03-context-findings.md  04-detail-questions.md  05-detail-answers.md  06-requirements-spec.md  metadata.json
requirements/2025-07-16-1139-external-integration-enhancement/: 00-initial-request.md  01-discovery-questions.md  02-discovery-answers.md  03-context-findings.md  04-detail-questions.md  05-detail-answers.md  06-requirements-spec.md  metadata.json
requirements/2025-07-16-1523-enrichment-consistency/: 00-initial-request.md  01-discovery-questions.md  02-discovery-answers.md  03-context-findings.md  04-detail-questions.md  05-detail-answers.md  06-requirements-spec.md  metadata.json
requirements/2025-07-16-2003-epub-ingestion/: 00-initial-request.md  01-discovery-questions.md  02-discovery-answers.md  03-context-findings.md  04-detail-questions.md  05-detail-answers.md  06-requirements-spec.md  metadata.json
scripts/: math_detection_analysis.py  regenerate_math_files.py  test_balanced_threshold.py
src/: __init__.py  cli.py  config_validator.py  logging_config.py  settings.py
src/frontend/: __init__.py  app.py
src/frontend/api/: __init__.py  concepts.py  dbpedia.py  graph.py  search.py
src/frontend/static/css/: main.css
src/frontend/static/js/: graph.js  main.js  performance.js
src/frontend/templates/: index.html
src/ingestion/: chunk_embed.py  config_schema.py  extractor_registry.py  improved_math_detector.py  math_detector.py  pdf2txt.py
src/ingestion/extractors/: __init__.py  base.py  document_detector.py  docx.py  epub.py  html.py  latex.py  pdf.py  xml.py
src/knowledge/: __init__.py  cache_validation.py  concept_cache.py  concept_extractor.py  external_ontologies.py  graph_db.py  graph_integration.py  graph_viz.py  ontology.py  relationship_mapper.py  utils.py
src/monitoring/: __init__.py  file_watcher.py  incremental_processor.py
src/optimization/: __init__.py  batch_processor.py  concept_deduplicator.py
test_data/: knowledge_graph.json
test_data/concepts/: efficient_frontier.json  portfolio_theory.json  sharpe_ratio.json
tests/: conftest.py  test_chunk_embed.py  test_cli.py  test_epub_extractor.py  test_extractor_registry.py  test_extractors.py  test_integration.py  test_math_detector.py  test_math_extraction.py  test_monitoring.py  test_normalization.py  test_optimization.py  test_pdf_ingestor.py  test_settings.py
