[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "supersonic-electronic",email = "jinkazama232@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.9, <4.0"
package-mode = false
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "fitz (>=0.0.1.dev2,<0.0.2)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "openai (>=1.95.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "jsonschema (>=4.24.0,<5.0.0)",
    "pinecone-client (>=3.0.0,<4.0.0)",
    "chromadb (>=0.4.0,<1.0.0)",
    "langchain-text-splitters (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"